   - fixed some problems with the current version in the SWPS3 example 
     (thanks to Maurizio Drocco)
   - introduced the ff_mdf/stencil2D/ff_graphsearch patterns (experimental)
   - fixed a bug in the pipeline when used as an accelerator
* 08/09/13 - v.2.0.2
   - added the possibility to freeze and thaw one single worker thread
     in a task-farm skeleton (see tests/test_stopstartthreads2.cpp)
   - added end_callback in case an external tool wants to be notified 
     of the skeleton tree termination
   - introduced FF_ESAVER (Energy SAVER) compiler flag (experimental) (thanks to Mehdi Goli )
   - ff_relax now uses nanosleep instead of usleep
   - first full porting to ARM processor (thanks to Mauro Mulatero)	
   - added new interfaces for the ff_farm
   - added a new construct ff_pipe only for C++11
   - fixed some problems with cmake
   - added ff_send_out_to as a method of the ff_loadbalancer class
   - added parallel_for.hpp which implements 'OpenMP-like' parallel_for 
   - added cleanup_workers method in the farm skeleton
   - removed fallback function in the farm emitter
   - removed many warnings when compiling with the Intel compiler
   - fixed get_my_id() problem for pipeline
* 23/12/13 - v.2.0.1
   - improved cmake compilation
   - added experimental OFED code 
   - added some layer1/2 tests
   - map pattern using CUDA: ff_mapCUDA
   - map and reduce patterns using OpenCL: ff_mapOCL and ff_reduceOCL
   - Added multi-input node: ff_minode class implemented
   - Added multi-output node: ff_monode class inplemented
   - Distributed version ported and tested on Win7 64-bit.
   - little fix on allocator.hpp, freesegment now release aligned memory 
     to avoid stack corruption on Win platform that requires symmetric 
     primitives for aligned memory allocation and deallocation.
   - Winsock.h (windows.h) and winsock2.h incompatibility issue partially resolved.
     <ff/dnode.h> should be included before other includes to avoid the problem. It